# stillgrid

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  ULTRAPLAN.md  render.yaml  rust-toolchain.toml
.claude/: launch.json
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml
content/: README.md
content/i18n/en/: ui.json
docs/growth/: submission-kit.md
docs/superpowers/plans/: 2026-05-25-plausible-analytics.md  2026-05-27-t5-coloring-commit-1.md  (+13 more)
engine/: Cargo.toml  rustfmt.toml
engine/examples/: solve_one.rs
engine/src/: board.rs  generator.rs  lib.rs  rng.rs  solver.rs  techniques.rs  variant.rs
engine/tests/: cli_sizes.rs  size_matrix.rs
server/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
server/src/: daily-pages.test.ts  daily-pages.ts  engine.test.ts  engine.ts  index.ts  landing-routes.test.ts
web/: eslint.config.mjs  grade.html  index.html  killer-sudoku-calculator.html  learn-advanced.html  learn-coloring.html  learn-core.html  learn-forcing-chains.html  learn-swordfish.html  learn-variants.html  learn-xy-wing.html  learn.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html  classic.html  evil-sudoku.html  jigsaw.html  killer.html  landing.css  llms.txt  manifest.webmanifest  privacy.html  puzzles.json  robots.txt  sitemap.xml  sudoku-16x16.html  sw.js  xsudoku.html
web/src/: App.tsx  analytics.test.ts  analytics.ts  boardState.test.ts  boardState.ts  index.css  main.tsx  share.test.ts  share.ts  storage.test.ts  storage.ts
(+38 files in other folders)
