[package]
name = "stillgrid-engine"
version = "0.1.0"
edition = "2021"
description = "Sudoku solver + generator core for Stillgrid"
license = "Proprietary"

[lib]
name = "stillgrid_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Engine has no external runtime deps — RNG is custom (src/rng.rs), JSON
# wire format is hand-rolled in the binaries (avoids serde weight).

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
